tests/baselines/reference/objectTypeWithConstructSignatureAppearsToBeFunctionType.errors.txt
tests/cases/conformance/types/members/objectTypeWithConstructSignatureAppearsToBeFunctionType.ts(8,18): error TS2348: Value of type 'I' is not callable. Did you mean to include 'new'?
tests/cases/conformance/types/members/objectTypeWithConstructSignatureAppearsToBeFunctionType.ts(16,18): error TS2348: Value of type 'new () => number' is not callable. Did you mean to include 'new'?


==== tests/cases/conformance/types/members/objectTypeWithConstructSignatureAppearsToBeFunctionType.ts (2 errors) ====
    // no errors expected below 
    
    interface I {
        new(): number;
    }
    
    var i: I;
    var r2: number = i();
                     ~~~
!!! error TS2348: Value of type 'I' is not callable. Did you mean to include 'new'?
    var r2b: number = new i();
    var r2c: (x: any, y?: any) => any = i.apply;
    
    var b: {
        new(): number;
    }
    
    var r4: number = b();
                     ~~~
!!! error TS2348: Value of type 'new () => number' is not callable. Did you mean to include 'new'?
    var r4b: number = new b();
    var r4c: (x: any, y?: any) => any = b.apply;